# goit-pythonweb-hw-06

./: alembic.ini  config.py  models.py  my_select.py  pyproject.toml  seed.py
alembic/: env.py
alembic/versions/: b44a87e016f3_initial_migration_hw_db.py
