[project]
name = "hw-06"
version = "0.1.0"
description = ""
authors = [
    {name = "Andrii Popov",email = "97399846+Andrii0207@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy (>=2.0.39,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
